# gtk-renderer

./: .clang_complete  .gitignore  CMakeLists.txt  build_makefile  mainwindow.ui  makefile  readme.md
for-vpl/: vplfy.py
for-vpl/vpl/: main.cpp  shapes.h  window.cpp
res/ui/: mainwindow.ui  newobject.ui
src/: .clang_complete  CMakeLists.txt  algebra.h  main.cpp  utils.h
src/app/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/cmake/: FindGTK3.cmake
src/lib/: CMakeLists.txt
src/lib/algebra/: CMakeLists.txt  matrix.cpp  matrix.h
src/lib/render/: CMakeLists.txt  display_file.cpp  display_file.h  geometry.cpp  geometry.h  graphic_object.h  renderer.cpp  renderer.h  stub2d.h  viewport.h  window.h
src/lib/utils/: CMakeLists.txt  display_file.h  geometry.cpp  geometry.h  graphic_object.h
src/rudolph/: .render.cpp.swp  .render.h.swp  .window.cpp.swp  CMakeLists.txt  clipper.cpp  clipper.h  dialog.cpp  dialog.h  drawable.h  geometry.cpp  geometry.h  matrix.h  render.cpp  render.h  rudolph.cpp  rudolph.h  window.cpp  window.h
src/rudolph/gui/: CMakeLists.txt  mainwindow.ui  mainwindow.ui~  newobject.ui  window.cpp  window.h
src/rudolph/objects/: CMakeLists.txt  beziercurve.cpp  camerawindow.cpp  camerawindow.h  object3d.h  shapes.cpp  shapes.h  viewport.h
src/rudolph/render/: CMakeLists.txt
src/rudolph/utils/: command.h  geometry.cpp  geometry.h
src/utils/: cppnew.h  gtk.h  signals.h
